[feat] String Manipulation: add count vowels problem